--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -3,6 +3,7 @@
 %p
   登録するTweetを入力してください
 = form_with(model: @post, local: true) do |f|
+  = render '/layouts/error_messages', model: f.object
   = render partial: "form", locals: { f: f }
 %p
   = link_to "/" do
